--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -42,6 +42,7 @@
           </div>
         </article>
         {{ partial "footer.html" . }}
+	{{ partial "related.html" . }}
       </div>
       <div id="bottom-bar" class="post-bottom-bar" data-behavior="{{ .Scratch.Get "sidebarBehavior" }}">
         {{ partial "post/actions.html" . }}
